much needed restructuring

--- a/old_index.html
+++ b/old_index.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="sticky-top">
@@ -20,67 +19,37 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
-              <li class="nav-item"><a class="nav-link" href="#app-screenshots">Demo</a></li>
-              <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#case-studies">Case Studies</a></li>
-              <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#features">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#app-screenshots">Demo</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#case-studies">Case Studies</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#contact">Contact</a>
+              </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
+
     <main role="main">
-        <section class="text-center py-5">
-            <div class="container d-flex flex-column flex-md-row align-items-center">
-                <div class="hero-text text-md-start mb-4 mb-md-0">
-                    <h1 class="display-4 fw-bold">GO GO GAIA</h1>
-                    <p class="lead mb-4">Your personal health companion for a balanced life.</p>
-                    <a class="btn btn-primary btn-lg" href="https://apps.apple.com/ca/app/go-go-gaia/id6608432371" role="button">Download on the App Store</a>
-                    
-                    <!-- Testimonial Block with Star Rating -->
-                    <blockquote class="testimonial mt-4">
-                        <div class="star-rating">★★★★★</div> <!-- Star rating inside the testimonial -->
-                        <p>"Gaia was the app I needed! Love the app, I’m able to track all sorts of health metrics in one place."</p>
-                        <footer class="blockquote-footer">App Store Review</footer>
-                    </blockquote>
-                </div>
-                <div class="hero-image" style="flex: 1; max-width: 30%;">
-                    <div id="screenshotCarousel" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="images/app-store-iphone 5.5_ (1).png" class="d-block w-100" alt="GAIA Dashboard">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/app-store-iphone 5.5_ (2).png" class="d-block w-100" alt="GAIA Data">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/app-store-iphone 5.5_ (3).png" class="d-block w-100" alt="GAIA Insights">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/app-store-iphone 5.5_ (4).png" class="d-block w-100" alt="GAIA Graph">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#screenshotCarousel" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#screenshotCarousel" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
+        <section class="banner-section text-center">
+            <div class="container py-5">
+                <h1 class="display-4 fw-bold">GO GO GAIA</h1>
+                <p class="lead mb-4">Find Your Balance, with simple, personalized insights</p>
+                <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Get Early Access</a>
             </div>
         </section>
 
-        <section class="dynamic-section text-center py-5">
-            <div class="container">
-                <p>Master your <span id="dynamicWord">health</span> for the long run.</p>
-            </div>
-        </section>
-
-        <section id="features" class="feature-section py-5">
+        <section id="features" class="feature-section py-5 bg-light">
             <div class="container">
               <h2>Why Use GAIA?</h2>
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
@@ -90,7 +59,7 @@
                       </div>
                       <div>
                           <h3>Simple Health Overview</h3>
-                          <p>Quickly grasp your daily health with tailored summaries.</p>
+                          <p>Understand your daily health at a glance with tailored summaries.</p>
                       </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
@@ -99,7 +68,7 @@
                       </div>
                       <div>
                           <h3>Long Term Outlook</h3>
-                          <p>Focus on sustainable health strategies for long-term well-being.</p>
+                          <p>Prioritize your long-term well-being with sustainable health strategies.</p>
                       </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
@@ -108,7 +77,7 @@
                       </div>
                       <div>
                           <h3>Dream Data Access</h3>
-                          <p>Access and export your health data effortlessly for insights.</p>
+                          <p>Easily access, compare, and export your health data for comprehensive insights.</p>
                       </div>
                     </div>
                 </div>
@@ -119,7 +88,7 @@
                     </div>
                     <div>
                         <h3>Ultra-Fast Logging</h3>
-                        <p>Log health data in under two seconds, keeping your day uninterrupted.</p>
+                        <p>Log your health data in under two seconds with our streamlined process, designed for efficiency and ease, keeping your day uninterrupted and your data tracking on point.</p>
                     </div>
                   </div>
                   <div class="feature-box col d-flex align-items-start">
@@ -128,7 +97,7 @@
                     </div>
                     <div>
                         <h3>Log Anything & Habit Tracking</h3>
-                        <p>Record and analyze any data that matters to you, with real-time habit tracking.</p>
+                        <p>We let you log anything, allowing you to record and analyze data that is important to you. Habit tracking is directly updated depending on your logged data.</p>
                     </div>
                   </div>
                   <div class="feature-box col d-flex align-items-start">
@@ -137,11 +106,46 @@
                     </div>
                     <div>
                         <h3>Single Health Metric</h3>
-                        <p>Achieve a clear daily goal with a single, research-based health metric.</p>
+                        <p>We simplify preventative health by providing a single research-based metric, setting a clear goal of 100% each day and helping you understand how to achieve it.</p>
                     </div>
                   </div>
               </div>
             </div>
+        </section>
+
+        <section class="dynamic-section text-center">
+          <div class="container py-5">
+              <p> Master your <span id="dynamicWord">sleep</span> for the long run.</p>
+          </div>
+      </section>
+
+        <section id="app-screenshots" class="py-5 bg-light">
+          <div class="container">
+            <div id="screenshotCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="Screenshot 2024-04-08 at 10.08.08.png" class="d-block w-100" alt="GAIA Dashboard">
+                </div>
+                <div class="carousel-item">
+                  <img src="Screenshot 2024-04-08 at 10.08.23.png" class="d-block w-100" alt="GAIA Data">
+                </div>
+                <div class="carousel-item">
+                  <img src="Screenshot 2024-04-08 at 10.08.30.png" class="d-block w-100" alt="GAIA Insights">
+                </div>
+                <div class="carousel-item">
+                  <img src="Screenshot 2024-04-08 at 10.09.09.png" class="d-block w-100" alt="GAIA Graph">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#screenshotCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#screenshotCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
         </section>
 
         <section id="about" class="manifesto-section">
@@ -149,19 +153,19 @@
                 <h2>Make Self Control Sexy Again</h2>
                 <p>When I was studying Clinical Neuroscience, it occurred to me that many Neurological Disorders are cureless, but can have a significant reduction in likelihood with appropriate Preventative Health Practices.</p>
                 <p>As many in Health, this sent me down a rabbit hole of learning, and trying different tech out.</p>
-                <p>I couldn't find any systems that I was happy with. I hit a lot of obstacles and was constantly getting frustrated and trying something new. Each time, the builders got some things right, but also some things wrong.</p>
-                <p>I started talking to my friends and realised that a lot of them were facing similar issues. They were trying to use data from the wearables they already wore, or the Drs appointments they went to, and couldn't find any straightforward ways to store the data or get useful/understandable information out of them.</p>
+                <p>I couldn’t find any systems that I was happy with. I hit a lot of obstacles and was constantly getting frustrated and trying something new. Each time, the builders got some things right, but also some things wrong.</p>
+                <p>I started talking to my friends and realised that a lot of them were facing similar issues. They were trying to use data from the wearables they already wore, or the Drs appointments they went to, and couldn’t find any straightforward ways to store the data or get useful/understandable information out of them.</p>
                 <p>I ended up adjusting my system to work with some of them, helping them solve their personal health mysteries:</p>
                 <ul>
                   <li>How can I get my V02 back to normal range?</li>
                   <li>How consistent is my low blood pressure? Should I be worried?</li>
                   <li>How do my different meals impact my insulin levels?</li>
-                  <li>I'm nervous about dementia- what can I do???</li>
+                  <li>I’m nervous about dementia- what can I do???</li>
                   <li>When am I working best, and how can I get more done in less time?</li>
                 </ul>
                 <p>Thus, GAIA was born.</p>
-                <p>I'll add different things you can log, add different passive sensors, keep the algos and associated recommendations up to date with the most recent research findings, and include the most cutting-edge sensors to help you keep on top of your game.</p>
-                <p>So- check out GAIA! If you have something that you're thinking about that I don't account for, let me know! I'll add it in!</p>
+                <p>I’ll add different things you can log, add different passive sensors, keep the algos and associated recommendations up to date with the most recent research findings, and include the most cutting-edge sensors to help you keep on top of your game.</p>
+                <p>So- check out GAIA! If you have something that you’re thinking about that I don’t account for, let me know! I’ll add it in!</p>
             </div>
         </section>
 
@@ -241,19 +245,19 @@
             </div>
         </section>
 
+
         <section id="early-access" class="hero-section text-center py-5">
             <div class="container">
-                <h2 class="display-6 fw-bold">Download Now!</h2>
-                <p class="lead mb-4">Download Go Go Gaia now to access the future of personal health management.</p>
-                <a class="btn btn-primary btn-lg" href="https://apps.apple.com/ca/app/go-go-gaia/id6608432371" role="button">Download on the App Store</a>
+                <h2 class="display-6 fw-bold">Sign Up Today For Free</h2>
+                <p class="lead mb-4">Your feedback can shape the future of personal health management. Get early access and help us make GO GO GAIA even better.</p>
+                <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Join the Beta Program</a>
             </div>
         </section>
     </main>
 
-    <footer class="footer mt-auto py-3" id="contact">
+    <footer class="footer mt-auto py-3 bg-light" id="contact">
     <div class="container text-center">
-        <p>Connect with us at <a href="mailto:support@hollandneurotech.com">support@hollandneurotech.com</a> or on Twitter <a href="https://twitter.com/holland_neuro">@holland_neuro</a></p>
-        <p><a href="#privacy-policy">Privacy Policy</a> | <a href="#terms-of-service">Terms of Service</a></p>
+        <p>Connect with us at <a href="mailto:abigailholland22@gmail.com">abigailholland22@gmail.com</a> or on Twitter <a href="https://twitter.com/holland_neuro">@holland_neuro</a></p>
     </div>
     </footer>
 
