--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="GO GO GAIA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GO GO GAIA is a personalized wellness app for women that offers cycle tracking, health insights, and a habit tracker for women.">
-    <meta name="keywords" content="All-in-one women's wellness app, Women's health tracking app, Cycle tracking and wellness app, Personalized wellness app for women, Wearable data health app for women, Habit tracker for women, Period and mood tracker app, Wellness insights app, Women’s health and fitness app">
+    <meta name="description" content="GO GO GAIA is an all-in-one women's wellness app that offers a holistic health tracking experience, integrating cycle tracking, personalized insights, and habit management for long-term wellness.">
+    <meta name="keywords" content="All-in-One Women's Wellness App, Holistic Health Tracking App for Women, Integrated Cycle Tracking and Wellness App, Personalized Wellness Experience for Women, Comprehensive Wellness Insights App, Long-Term Health Management App for Women, Habit Tracker for Women, Period and Mood Tracker App, Wellness Insights and Recommendations, Women's Health and Fitness Management App, Wearable Data Integration for Women's Health">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph Meta Tags -->
@@ -67,14 +67,14 @@
             <div class="container d-flex flex-column flex-md-row align-items-center">
                 <div class="hero-text text-md-start mb-4 mb-md-0">
                     <h1 class="display-4 fw-bold">GO GO GAIA</h1>
-                    <p class="lead mb-4">Your personal health companion for a balanced life.</p>
+                    <p class="lead mb-4">GO GO GAIA is your ultimate <strong>all-in-one women's wellness app</strong>, designed to provide a <strong>holistic health tracking experience</strong>. With features like <strong>integrated cycle tracking</strong>, personalized insights, and a <strong>habit tracker for women</strong>, you can manage your long-term wellness journey effectively.</p>
                     <a class="btn btn-primary btn-lg" href="https://apps.apple.com/ca/app/go-go-gaia/id6608432371" role="button">Download on the App Store</a>
                     
                     <!-- Testimonial Block with Star Rating -->
                     <blockquote class="testimonial mt-4">
-                        <div class="star-rating">★★★★★</div> <!-- Star rating inside the testimonial -->
-                        <p>"Gaia was the app I needed! Love the app, I’m able to track all sorts of health metrics in one place."</p>
-                        <footer class="blockquote-footer">App Store Review</footer>
+                        <div class="star-rating">★★★★★</div>
+                        <p>"Gaia was the app I needed! Love the app, I’m able to track all sorts of health metrics in one place, including my period and mood, which helps me understand how to work with my body."</p>
+                        <footer class="blockquote-footer">Satisfied User</footer>
                     </blockquote>
                 </div>
                 <div class="hero-image" style="flex: 1; max-width: 30%;">
