--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
             <div class="container d-flex flex-column flex-md-row align-items-center">
                 <div class="hero-text text-md-start mb-4 mb-md-0">
                     <h1 class="display-4 fw-bold">GO GO GAIA</h1>
-                    <p class="lead mb-4">GO GO GAIA is your ultimate <strong>all-in-one women's wellness app</strong>, designed to provide a <strong>holistic health tracking experience</strong>. With features like <strong>integrated cycle tracking</strong>, personalized insights, and a <strong>habit tracker for women</strong>, you can manage your long-term wellness journey effectively.</p>
+                    <p class="lead mb-4">Your personal health companion for a balanced life.</p>
                     <a class="btn btn-primary btn-lg" href="https://apps.apple.com/ca/app/go-go-gaia/id6608432371" role="button">Download on the App Store</a>
                     
                     <!-- Testimonial Block with Star Rating -->
                     <blockquote class="testimonial mt-4">
-                        <div class="star-rating">★★★★★</div>
-                        <p>"Gaia was the app I needed! Love the app, I’m able to track all sorts of health metrics in one place, including my period and mood, which helps me understand how to work with my body."</p>
-                        <footer class="blockquote-footer">Satisfied User</footer>
-                    </blockquote>
+                      <div class="star-rating">★★★★★</div> <!-- Star rating inside the testimonial -->
+                      <p>"Finally, a cycle app that actually considers the whole picture of your health."</p>
+                      <footer class="blockquote-footer">Sarah, 26</footer>
+                  </blockquote>
                 </div>
                 <div class="hero-image" style="flex: 1; max-width: 30%;">
                     <div id="screenshotCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -108,170 +108,108 @@
 
         <section class="dynamic-section text-center py-5">
             <div class="container">
-                <p>Master your <span id="dynamicWord">health</span> for the long run.</p>
+                <p>Get in control of your <span id="dynamicWord">health</span>.</p>
             </div>
         </section>
 
         <section id="features" class="feature-section py-5">
             <div class="container">
-              <h2>Why Use GAIA?</h2>
+                <h2>Why Use GAIA?</h2>
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                     <div class="feature-box col d-flex align-items-start">
-                      <div class="icon-square text-black me-3">
-                        <i class="bi bi-eye" style="font-size: 2rem;"></i>
-                      </div>
-                      <div>
-                          <h3>Simple Health Overview</h3>
-                          <p>Quickly grasp your daily health with tailored summaries.</p>
-                      </div>
+                        <div class="icon-square text-black me-3">
+                            <i class="bi bi-check-circle" style="font-size: 2rem;"></i>
+                        </div>
+                        <div>
+                            <h3>1-Click Logging</h3>
+                            <p>Track diet, fitness, mood, sleep, and more—with one tap.</p>
+                        </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
-                      <div class="icon-square text-black me-3">
-                        <i class="bi bi-calendar3" style="font-size: 2rem;"></i>
-                      </div>
-                      <div>
-                          <h3>Long Term Outlook</h3>
-                          <p>Focus on sustainable health strategies for long-term well-being.</p>
-                      </div>
+                        <div class="icon-square text-black me-3">
+                            <i class="bi bi-calendar" style="font-size: 2rem;"></i>
+                        </div>
+                        <div>
+                            <h3>Cycle Tracking</h3>
+                            <p>Accurate predictions and clear insights for every phase.</p>
+                        </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
-                      <div class="icon-square text-black me-3">
-                        <i class="bi bi-cloud-download" style="font-size: 2rem;"></i>
-                      </div>
-                      <div>
-                          <h3>Dream Data Access</h3>
-                          <p>Access and export your health data effortlessly for insights.</p>
-                      </div>
+                        <div class="icon-square text-black me-3">
+                            <i class="bi bi-baby" style="font-size: 2rem;"></i>
+                        </div>
+                        <div>
+                            <h3>Pregnancy Mode</h3>
+                            <p>Track symptoms, milestones, and changes during pregnancy.</p>
+                        </div>
+                    </div>
+                    <div class="feature-box col d-flex align-items-start">
+                        <div class="icon-square text-black me-3">
+                            <i class="bi bi-check-square" style="font-size: 2rem;"></i>
+                        </div>
+                        <div>
+                            <h3>Habits</h3>
+                            <p>Auto-update custom habits for easy, real-time tracking.</p>
+                        </div>
+                    </div>
+                    <div class="feature-box col d-flex align-items-start">
+                        <div class="icon-square text-black me-3">
+                            <i class="bi bi-graph-up" style="font-size: 2rem;"></i>
+                        </div>
+                        <div>
+                            <h3>Correlation Insights</h3>
+                            <p>See how your sleep, mood, and habits affect each other.</p>
+                        </div>
+                    </div>
+                    <div class="feature-box col d-flex align-items-start">
+                        <div class="icon-square text-black me-3">
+                            <i class="bi bi-layout-text-sidebar" style="font-size: 2rem;"></i>
+                        </div>
+                        <div>
+                            <h3>All-in-One Dashboard</h3>
+                            <p>Every detail in one simple, easy-to-read view.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-                  <div class="feature-box col d-flex align-items-start">
-                    <div class="icon-square text-black me-3">
-                      <i class="bi bi-clock-fill" style="font-size: 2rem;"></i>
-                    </div>
-                    <div>
-                        <h3>Ultra-Fast Logging</h3>
-                        <p>Log health data in under two seconds, keeping your day uninterrupted.</p>
-                    </div>
+            </div>
+        </section>
+
+
+        <section id="testimonials" class="py-5 bg-light">
+          <div class="container text-center">
+              <h2 class="mb-4">What Our Users Say</h2>
+              <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                      <div class="carousel-item active">
+                          <div class="testimonial-bubble">
+                              <p class="testimonial-text">"Go Go Gaia has been a game changer! Now, I can easily track my cycle and health metrics all in one place. I now plan my important meetings around my high-energy days, making sure I am bringing my A Game."</p>
+                              <p class="blockquote-footer">Emily, 29</footer>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                          <div class="testimonial-bubble">
+                              <p class="testimonial-text">"I love how Go Go Gaia integrates my fitness and health data! It’s empowering to have everything I need for my wellness journey in one app. Highly recommend it to all women!"</p>
+                              <p class="blockquote-footer">Jessica, 34</footer>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                          <div class="testimonial-bubble">
+                              <p class="testimonial-text">"Finally, an app that understands women's health! Go Go Gaia has made tracking my mood and period so easy. The insights are incredibly helpful for managing my overall well-being!"</p>
+                              <p class="blockquote-footer">Sophie, 27</footer>
+                          </div>
+                      </div>
                   </div>
-                  <div class="feature-box col d-flex align-items-start">
-                    <div class="icon-square text-black me-3">
-                      <i class="bi bi-pencil-square" style="font-size: 2rem;"></i>
-                    </div>
-                    <div>
-                        <h3>Log Anything & Habit Tracking</h3>
-                        <p>Record and analyze any data that matters to you, with real-time habit tracking.</p>
-                    </div>
-                  </div>
-                  <div class="feature-box col d-flex align-items-start">
-                    <div class="icon-square text-black me-3">
-                      <i class="bi bi-bar-chart-line" style="font-size: 2rem;"></i>
-                    </div>
-                    <div>
-                        <h3>Single Health Metric</h3>
-                        <p>Achieve a clear daily goal with a single, research-based health metric.</p>
-                    </div>
-                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                  </button>
               </div>
-            </div>
-        </section>
-
-        <section id="about" class="manifesto-section">
-            <div class="container">
-                <h2>Make Self Control Sexy Again</h2>
-                <p>When I was studying Clinical Neuroscience, it occurred to me that many Neurological Disorders are cureless, but can have a significant reduction in likelihood with appropriate Preventative Health Practices.</p>
-                <p>As many in Health, this sent me down a rabbit hole of learning, and trying different tech out.</p>
-                <p>I couldn't find any systems that I was happy with. I hit a lot of obstacles and was constantly getting frustrated and trying something new. Each time, the builders got some things right, but also some things wrong.</p>
-                <p>I started talking to my friends and realised that a lot of them were facing similar issues. They were trying to use data from the wearables they already wore, or the Drs appointments they went to, and couldn't find any straightforward ways to store the data or get useful/understandable information out of them.</p>
-                <p>I ended up adjusting my system to work with some of them, helping them solve their personal health mysteries:</p>
-                <ul>
-                  <li>How can I get my V02 back to normal range?</li>
-                  <li>How consistent is my low blood pressure? Should I be worried?</li>
-                  <li>How do my different meals impact my insulin levels?</li>
-                  <li>I'm nervous about dementia- what can I do???</li>
-                  <li>When am I working best, and how can I get more done in less time?</li>
-                </ul>
-                <p>Thus, GAIA was born.</p>
-                <p>I'll add different things you can log, add different passive sensors, keep the algos and associated recommendations up to date with the most recent research findings, and include the most cutting-edge sensors to help you keep on top of your game.</p>
-                <p>So- check out GAIA! If you have something that you're thinking about that I don't account for, let me know! I'll add it in!</p>
-            </div>
-        </section>
-
-        <!-- Case Studies Section -->
-        <section id="case-studies" class="py-5 bg-light">
-            <div class="container">
-                <h2>Case Studies</h2>
-                <h5 class="mb-4">Learn how you can use GAIA today</h5>
-                <div id="caseStudiesCarousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="row g-4">
-                                <div class="col-md-4">
-                                    <div class="card h-100">
-                                        <div class="card-body">
-                                            <h3 class="card-title">Pregnancy</h3>
-                                            <p class="card-text">Log the information relevant to your pregnancy and manage your health data in an integrated platform. GO GO GAIA helps you keep all your important metrics organized and accessible for informed decision-making.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card h-100">
-                                        <div class="card-body">
-                                            <h3 class="card-title">Diabetes</h3>
-                                            <p class="card-text">Log the information relevant to your diabetes and manage your blood sugar levels, dietary habits, and overall health data. Use GO GO GAIA's integrated platform to keep your important metrics organized and accessible for informed decision-making.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card h-100">
-                                        <div class="card-body">
-                                            <h3 class="card-title">Longevity</h3>
-                                            <p class="card-text">Log the information relevant to your long-term health goals and manage your habits and metrics. GO GO GAIA's integrated platform helps you keep your important metrics organized and accessible for informed decision-making.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="row g-4">
-                                <div class="col-md-4">
-                                    <div class="card h-100">
-                                        <div class="card-body">
-                                            <h3 class="card-title">Fitness</h3>
-                                            <p class="card-text">Log the information relevant to your fitness activities and manage your workout routines and progress. GO GO GAIA's integrated platform helps you keep your fitness data organized and accessible for informed decision-making.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card h-100">
-                                        <div class="card-body">
-                                            <h3 class="card-title">Research</h3>
-                                            <p class="card-text">Log the information relevant to your research and track various data points with precision. GO GO GAIA's integrated platform helps you keep your research data organized and accessible for informed decision-making.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card h-100">
-                                        <div class="card-body">
-                                            <h3 class="card-title">Mental Health</h3>
-                                            <p class="card-text">Log the information relevant to your mental health and manage your mood, stress levels, and other mental health metrics. GO GO GAIA's integrated platform helps you keep your mental health data organized and accessible for informed decision-making.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#caseStudiesCarousel" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#caseStudiesCarousel" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
-        </section>
+          </div>
+      </section>
 
         <section id="early-access" class="hero-section text-center py-5">
             <div class="container">
