--- a/index.html
+++ b/index.html
@@ -81,16 +81,24 @@
                     <div id="screenshotCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/app-store-iphone 5.5_ (1).png" class="d-block w-100" alt="All-in-one women's wellness app - Track your health metrics easily">
+                                <div class="image-wrapper">
+                                    <img src="images/app-store-iphone 5.5_ (1).png" class="d-block w-100" alt="All-in-one women's wellness app - Track your health metrics easily">
+                                </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/app-store-iphone 5.5_ (2).png" class="d-block w-100" alt="GAIA Data">
+                                <div class="image-wrapper">
+                                    <img src="images/app-store-iphone 5.5_ (2).png" class="d-block w-100" alt="GAIA Data">
+                                </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/app-store-iphone 5.5_ (3).png" class="d-block w-100" alt="GAIA Insights">
+                                <div class="image-wrapper">
+                                    <img src="images/app-store-iphone 5.5_ (3).png" class="d-block w-100" alt="GAIA Insights">
+                                </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/app-store-iphone 5.5_ (4).png" class="d-block w-100" alt="GAIA Graph">
+                                <div class="image-wrapper">
+                                    <img src="images/app-store-iphone 5.5_ (4).png" class="d-block w-100" alt="GAIA Graph">
+                                </div>
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#screenshotCarousel" data-bs-slide="prev">
