updated link for tracking

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="hero-text text-md-start mb-4 mb-md-0">
                     <h1 class="display-4 fw-bold">GO GO GAIA</h1>
                     <p class="lead mb-4">Your personal health companion for a balanced life.</p>
-                    <a class="btn btn-primary btn-lg" href="https://apps.apple.com/ca/app/go-go-gaia/id6608432371" role="button">Download on the App Store</a>
+                    <a class="btn btn-primary btn-lg" href="https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8" role="button">Download on the App Store</a>
                     
                     <!-- Testimonial Block with Star Rating -->
                     <blockquote class="testimonial mt-4">
@@ -223,7 +223,7 @@
             <div class="container">
                 <h2 class="display-6 fw-bold">Download Now!</h2>
                 <p class="lead mb-4">Download Go Go Gaia now to access the future of personal health management.</p>
-                <a class="btn btn-primary btn-lg" href="https://apps.apple.com/ca/app/go-go-gaia/id6608432371" role="button">Download on the App Store</a>
+                <a class="btn btn-primary btn-lg" href="https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8" role="button">Download on the App Store</a>
             </div>
         </section>
     </main>
